...
@Preview(showBackground = true)
@Composable
fun NomeVigiaPagePreview() {
    PCPCompTheme {
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            NomeVigiaContent(
                nomeVigia = "ANDERSON DA SILVA DELGADO",
                flagDialog = false,
                setCloseDialog = {},
                failure = "",
                onNavMatricVigia = {},
                onNavLocal = {},
                modifier = Modifier.padding(innerPadding)
...
