...
import br.com.usinasantafe.pcpcomp.ui.theme.PCPCompTheme
import br.com.usinasantafe.pcpcomp.ui.theme.TextButtonDesign
import br.com.usinasantafe.pcpcomp.ui.theme.TitleDesign
import br.com.usinasantafe.pcpcomp.utils.FlowApp
import br.com.usinasantafe.pcpcomp.utils.TypeMovKey

const val TAG_OBSERV_TEXT_FIELD_CHAVE = "tag_observ_text_field_chave"

@Composable
fun ObservChaveScreen(
    viewModel: ObservChaveViewModel,
    onNavMatricColab: () -> Unit,
    onNavControleList: () -> Unit,
...
